--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,6 +22,7 @@
       <td><%= link_to "Edit", edit_product_path(p), :class=>"btn btn-primary"%></td>
       <td><%= link_to "Show", product_path(p), :class=>"btn btn-success"%></td>
       <td><%= link_to "Delete", p, method: :delete, data: {confirm: "Are you sure!"}, :class=>"btn btn-danger"%></td>
+      <td><%= link_to "Buy", users_payment_form_path(product_id: p.id)%></td>
     </tr>
     <%end%>
   </tr>
